--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
+    "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.5"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.23",
+    "@types/qs": "^6.9.7",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/styled-components": "^5.1.24",
